# zibtek-Assignment

./: .gitignore  DEPLOYMENT_CHECKLIST.md  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  LANGSMITH_SETUP.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.txt  QUICK_REFERENCE.md  README.md  RUN_LOCALLY.md  SETUP.md  TESTING.md  TEST_CHATBOT.md  docker-compose.yml  setup-local.bat  start-backend-uv.bat  start-backend.bat  start-frontend.bat
backend/: .dockerignore  .gitignore  Dockerfile  env.template  pyproject.toml  requirements.txt  start.sh
backend/app/: ingest_data.py  main.py
backend/app/api/routes/: chat.py  conversations.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: schemas.py
backend/app/services/: embeddings.py  langchain_rag.py  qdrant_service.py  reranker.py  scraper.py
backend/app/utils/: logger.py
backend/data/: scraped_content_www_zibtek_com.json
data/: scraped_content_www_zibtek_com.json
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInput.tsx  ChatInterface.tsx  Message.tsx  MessageList.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/types/: chat.ts
