[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "langchain==0.1.4",
    "langchain-openai==0.0.5",
    "langchain-community==0.0.16",
    "langsmith>=0.0.83,<0.1",
    "qdrant-client==1.7.3",
    "beautifulsoup4==4.12.3",
    "requests==2.31.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "sentence-transformers>=5.1.1",
    "huggingface-hub[hf-xet]>=0.35.3",
]

[tool.uv]
# Optional dev tools
dev-dependencies = [
    "black",
    "ruff",
    "pytest",
]
